# lieferando-stampcard

./: Cargo.toml  README.md  lieferando.html  msg.html
src/: config.rs  main.rs
