[package]
name = "lieferando-stampcard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
playwright = "0.0.20"
reqwest = "0.11.14"
scraper = "0.14.0"
tokio = { version = "1.24.2", features = ["full"] }
